--- a/esp32_tcpClient/main/CMakeLists.txt
+++ b/esp32_tcpClient/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "app_main.c" "tcp_server.c" "led_strip_spi.c"
+idf_component_register(SRCS "app_main.c" "tcp_server.c"
                         INCLUDE_DIRS ".")
