--- a/esp32_tcpClient/main/idf_component.yml
+++ b/esp32_tcpClient/main/idf_component.yml
@@ -4,6 +4,8 @@ dependencies:
   ## Required IDF version
   idf:
     version: ">=5.1.0"
+  protocol_examples_common:
+    path: ${IDF_PATH}/examples/common_components/protocol_examples_common
   # # Put list of dependencies here
   # # For components maintained by Espressif:
   # component: "~1.0.0"
